Fix dark mode highlight

--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ h1 {
     font-size: calc(var(--heading-1) * .8);
     line-height: 1;
     text-transform: uppercase;
+    color: var(--primary);
 }
 
 #password[data-tooltip]::after {
@@ -157,7 +158,7 @@ a {
 }
 
 .red {
-    color: #D71920;
+    color: var(--highlight);
 }
 
 .small {
